--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body { font-family: Arial, sans-serif; width: 200px; padding: 10px; }
-    label { display: flex; align-items: center; margin: 10px 0; }
-    input[type="checkbox"] { margin-right: 10px; }
-    button { width: 100%; padding: 5px; cursor: pointer; }
-  </style>
+<link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <label>
-    <input type="checkbox" id="enableToggle">
-    Enable UTTP Blocker
-  </label>
-  <label>
-    <input type="checkbox" id="silentToggle">
-    Hide placeholders
-  </label>
-  <script src="popup.js"></script>
+    <label>
+        <input type="checkbox" id="enableToggle">
+        Enable UTTP Blocker
+    </label>
+    <label>
+        <input type="checkbox" id="silentToggle">
+        Hide placeholders
+    </label>
+    <label class="bl-label">
+        Add to username blacklist<span id="addUserMsg" class="bl-add-message">add user message</span>
+
+    </label>
+    <div class="bl-input-wrapper">
+        <input type="text" id="userBlacklistInput" class="bl-input">
+        <button id="userBlacklistAdd" class="bl-add-button">+ add username</button>
+    </div>
+    <div class="bl-list-wrapper">
+        <ul id="userBlacklistList" class="bl-list">
+
+        </ul>
+    </div>
+    <script src="popup.js"></script>
 </body>
 </html>
