Added word/phrase blacklist and screenshots

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,6 @@
     </label>
     <label class="bl-label">
         Add to username blacklist<span id="addUserMsg" class="bl-add-message">add user message</span>
-
     </label>
     <div class="bl-input-wrapper">
         <input type="text" id="userBlacklistInput" class="bl-input">
@@ -22,7 +21,17 @@
     </div>
     <div class="bl-list-wrapper">
         <ul id="userBlacklistList" class="bl-list">
-
+        </ul>
+    </div>
+    <label class="bl-label">
+        Add to word/phrase blacklist<span id="addWordMsg" class="bl-add-message">add word/phrase message</span>
+    </label>
+    <div class="bl-input-wrapper">
+        <input type="text" id="wordBlacklistInput" class="bl-input">
+        <button id="wordBlacklistAdd" class="bl-add-button">+ add word/phrase</button>
+    </div>
+    <div class="bl-list-wrapper">
+        <ul id="wordBlacklistList" class="bl-list">
         </ul>
     </div>
     <script src="popup.js"></script>
