Update extension name

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 <body>
     <label>
         <input type="checkbox" id="enableToggle">
-        Enable UTTP Blocker
+        Enable Comment Blocker for YouTube
     </label>
     <label>
         <input type="checkbox" id="silentToggle">
